# interpolator

./: .gitignore  .readthedocs.yaml  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  benchmark.py  benchmark_report.md  benchmark_results.json  pyproject.toml
backend/fivedreg/: __init__.py  data.py  main.py  model.py
backend/fivedreg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_data.py  test_model.py
docs/: Makefile  requirements.txt
docs/source/: api_reference.rst  conf.py  deployment.rst  index.rst  installation.rst  performance.rst  quickstart.rst  testing.rst  user_guide.rst
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/predict/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.22fb1342dcf6609b.hot-update.js  webpack.b6b4b81473ccb2e6.hot-update.js  webpack.bb2a8c2ad9f12e3b.hot-update.js  webpack.cd7c1894918fbce1.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/app/train/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/lib/: api.ts
scripts/: build_docs.sh  launch.sh
(+14 files in other folders)
